[project]
name = "learning-agent-development-with-python"
version = "0.1.0"
description = "A message delivery agent served over HTTP, backed by a local Ollama model via the OpenAI Agents SDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents",
    "fastapi",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

